fix#4 input styling on ios

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @tailwind base;
 @tailwind components;
+@tailwind utilities;
 
 input[type='text'],
 input[type='button'],
@@ -7,4 +8,8 @@ input[type='submit'] {
   -webkit-border-radius: 0;
 }
 
-@tailwind utilities;
+@layer components {
+  .input {
+    @apply w-64 p-2 rounded-l-lg bg-slate-800 focus:outline-none text-slate-200 placeholder:text-slate-500;
+  }
+}
